# contextleak

./: .gitignore  LICENSE  README.md  blocked_words.txt  config.json  pyproject.toml
.github/workflows/: tests.yml
src/contextleak/: __init__.py  cli.py  core.py
src/contextleak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
