[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextleak"
version = "0.1.0"  # Pamiętaj o Semantic Versioning
description = "Narzędzie do ochrony przed wyciekiem danych wrażliwych w LLM"
readme = "README.md"
authors = [
  { name = "Oskar Brzycki", email = "mroscar005@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "rich",      # Do ładnego CLI
    "pydantic",  # Do walidacji danych (opcjonalne, ale pro)
]

[project.urls]
"Homepage" = "https://github.com/oskarbrzycki/contextleak"
"Bug Tracker" = "https://github.com/oskarbrzycki/contextleak/issues"

# To sprawia, że komenda 'contextleak' działa w terminalu
[project.scripts]
contextleak = "contextleak.cli:main"

[tool.setuptools.package-data]
contextleak = ["py.typed"] # Informacja, że paczka ma typy