[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextleak"
version = "1.0.0"
description = "Open Source AI Firewall & Vulnerability Scanner for Local LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Oskar Brzycki", email = "your_email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
# Dependency list based on your requirements.txt
dependencies = [
    "torch",
    "transformers",
    "presidio-analyzer",   # Microsoft Presidio analysis engine
    "presidio-anonymizer", # Microsoft Presidio anonymization module
    "spacy",
    "streamlit",
    "pandas",
    "numpy",
]

[project.scripts]
# Command to run the application
contextleak = "contextleak.cli:main"

[project.urls]
"Homepage" = "https://github.com/oskarbrzycki/contextleak"
"Bug Tracker" = "https://github.com/oskarbrzycki/contextleak/issues"